added production stills page and links on other pages

--- a/production-stills.html
+++ b/production-stills.html
@@ -5,7 +5,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
 <script src="galleria/galleria-1.5.7.min.js"></script>
 
-<title>Photography Portfolio | Ben Cowper - Filmmaker, Educator, Artist</title>
+<title>Production Stills | Ben Cowper - Filmmaker, Educator, Artist</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 
 <style type="text/css">
@@ -47,9 +47,9 @@
   <li><a href="personal-film-portfolio.html">film - personal</a></li>
   <li><a href="professional-film-portfolio.html">film - professional</a></li>
   <li><a href="demo-reel.html">reel</a></li>
-  <li><a href="production-stills.html">production stills</a></li>
+  <li><a class="active" href="production-stills.html">production stills</a></li>
   <li><a href="tv-studio-renovation.html">tv studio renovation</a></li>
-  <li><a class="active" href="photography-portfolio.html">photography</a></li>
+  <li><a href="photography-portfolio.html">photography</a></li>
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="Ben Cowper | c.v..pdf">c.v.</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
@@ -63,24 +63,29 @@
 
 <div class="main">
 
-<a name="photography"></a>
 <hr color="#50A8AF">
-<h2>Photography</h2>
+<h2>Film Production Stills</h2>
 <hr color="#50A8AF">
 <br>
 
 <div class="space">
 <div class="container">
 <div class="galleria">
-    <img src="images/Sunglasses.jpg">
-    <img src="images/Snowflake.jpg">
-    <img src="images/SanFrancisco.jpg">
-    <img src="images/RedBarn.jpg">
-    <img src="images/Moon.jpg">
-    <img src="images/Mountain.jpg">
-    <img src="images/Boat.jpg">
-    <img src="images/Squam.jpg">
-    <img src="images/Yellowstone.jpg">
+    <img src="images/production/Prod_Nona1.jpg">
+    <img src="images/production/Prod_Nona2.jpg">
+    <img src="images/production/Prod_Nona3.jpg">
+    <img src="images/production/Prod_Nona4.jpg">
+    <img src="images/production/Prod_Nona5.jpg">
+    <img src="images/production/Prod_Nona6.jpg">
+    <img src="images/production/Prod_Nona7.jpg">
+    <img src="images/production/Prod_Ska.jpg">
+    <img src="images/production/Prod_HazardLights.jpg">
+    <img src="images/production/Prod_Demo.jpg">
+    <img src="images/production/Prod_Demo2.jpg">
+    <img src="images/production/Prod_SomethingRestless1.jpg">
+    <img src="images/production/Prod_SomethingRestless2.jpg">
+    <img src="images/production/Prod_SomethingRestless3.jpg">
+    <img src="images/production/Prod_16mm.jpg">
 </div>
 </div>
 
@@ -93,13 +98,10 @@
 
 <br><br>
 <p>
-  Commercial and Art Photography
+Various stills from productions I have worked on:
 <br><br>
-  All photographs by Ben Cowper
+<i>Nona, Science ka Adda, Hazard Lights, Something Restless, </i>and<i> Falls Into Sky.</i>
 </p>
-<br><br>
-<p>
-  Further photography work with <a target="_blank" href="https://www.jandsvision.com/product/js-felis-vintage-cat-eyes-large-fit-polarized-100uv-sunglasses-women/">J+S Vision can be seen here</a>
 </div>
 </div>
 
