--- a/production-stills.html
+++ b/production-stills.html
@@ -100,7 +100,7 @@
 <p>
 Various stills from productions I have worked on:
 <br><br>
-<i>Nona, Science ka Adda, Hazard Lights, Something Restless, </i>and<i> Falls Into Sky.</i>
+<i>Nona, Science ka Adda, Hazard Lights, Something Restless, </i>and<i> falls into sky.</i>
 </p>
 </div>
 </div>
