modified about me, edited various text

--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -71,9 +71,15 @@ I have always loved working with video, and began producing professional work as
 
 <br><br>
 
-A more complete list of my professional and personal work can be found <a target="_blank" href="Ben Cowper | c.v..pdf">here on my C.V.</a>
+I am always seeking opportunities to collaborate. At the moment I'm most interested in narrative and documentary film, interactive or experimental installation, and commercial work. Feel free to contact me if you want to work together.
 
 <br><br>
+
+A more complete list of my professional and personal work can be found <a target="_blank" href="Ben Cowper | c.v..pdf">here on my C.V.</a>
+
+</p>
+
+<br>
 
 <hr color="#af5750">
 
@@ -86,7 +92,7 @@ A more complete list of my professional and personal work can be found <a target
 <p>
   <b>Cinematographer</b>
   <br>
-  5DmkIII w/Magic Lantern, Blackmagic Cinema, Canon C100, GoPro, 16mm Bolex, Super 8
+  5DmkIII w/Magic Lantern, Blackmagic Cinema, Canon Cinema, GoPro, 16mm Bolex, Super 8 (hand processed)
 <br><br>
   <b>Editor, Colorist</b>
   <br>
@@ -106,7 +112,7 @@ A more complete list of my professional and personal work can be found <a target
 <br><br>
   <b>Photographer</b>
   <br>
-  Digital, 35mm, medium format, and large format film
+  Digital, 35mm, medium format, and large format film (various cameras and hand processing techniques)
 <br><br>
   <b>Archivist</b>
   <br>
@@ -114,11 +120,11 @@ A more complete list of my professional and personal work can be found <a target
 <br><br>
   <b>Live Streaming</b>
   <br>
-  Live switching of audio and video for television, theatre, and conferences. Designed and built a 4 camera live TV production and green screen studio. (Blackmagic ATEM, Roland V-Mixer)
+  Live switching of audio and video for television, theatre, and conferences. Designed and built a 4 camera live TV production and green screen studio. (Blackmagic ATEM, Ustream, Mediasite)
 <br><br>
   <b>IT and Academic Technology</b>
   <br>
-  Python, Apple Computers, Google, LaTeX, Arduino, Microsoft Office, Canvas, Moodle
+  Python, Apple Computers, Raspberry Pi, Google Suite, LaTeX, Arduino, Microsoft Office, Canvas, Moodle
 </p>
 
 </div>
