--- a/personal-film-portfolio.html
+++ b/personal-film-portfolio.html
@@ -119,7 +119,9 @@
 <br><br>
   An experimental horror film about a hitchhiker's descent into madness, adapted from a short story by Stephen King. The film was produced through King's dollar baby program as my thesis film at Hampshire College. For a private screening, please <a href="mailto:cowpervideos@gmail.com">contact me</a> directly.
 <br><br>
-  More information about the film and production process in <a target="_blank" href="http://www.stephenkingshortmovies.com/interviews/ben-cowper-october-18-2017/">my interview</a>  with stephenkingshortmovies.com
+  Read more about the film and production process in <a target="_blank" href="http://www.stephenkingshortmovies.com/interviews/ben-cowper-october-18-2017/">my interview</a>  with stephenkingshortmovies.com
+<br><br>
+  <a href="production-stills.html"> Production stills</a>
 </p>
 </div>
 
@@ -166,7 +168,7 @@
 <br><br>
   director, editor, cinematographer
 <br><br>
-  Shot, edited, and self processed Super 8 film in Paris.
+  Shot, edited, and hand processed Super 8 film in Paris.
 </p>
 </div>
 
@@ -214,6 +216,8 @@
   technical director, consulting cinematographer, 5.1 audio mix engineer
 <br><br>
   Three vignette stories, each featuring a unique set of actors, thematically meld together into a single story of two college students' fleeting but impactful time together before they graduate and part ways.
+<br><br>
+  <a href="production-stills.html"> Production stills</a>
 </p>
 </div>
 
@@ -282,6 +286,8 @@
   assistant director
 <br><br>
   A friend's thesis film.
+<br><br>
+  <a href="production-stills.html"> Production stills</a>
 </p>
 </div>
 </div>
