--- a/professional-film-portfolio.html
+++ b/professional-film-portfolio.html
@@ -126,6 +126,8 @@
   <a target="_blank" href="https://vimeo.com/sciencekaadda">More episodes</a>
 <br><br>
   <a target="_blank" href="http://www.dawn.com/news/1220513/how-did-an-urdu-greeting-reach-the-edge-of-our-solar-system">News article featured in DAWN</a>
+<br><br>
+  <a href="production-stills.html"> Production stills</a>
 </p>
 </div>
 
