added contact info

--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -62,16 +62,17 @@
 
 <img class="space" id="me" src="images/Ben_Cowper.jpg" alt="Ben Cowper">
 
-<br>
+<br><br>
 
 <div class="space">
 
 <p>
-I have always loved working with video, and began producing professional work as early as 2007. Since then I have worked on over 100 projects for a wide variety of individuals, artists, and commercial clients including: Yale University, Hampshire College, Mount Holyoke College, PBS <i>American Masters</i>, Cambridge University Press, Northampton Chamber of Commerce, and The Global Fibrosis Foundation.
+
+I am always seeking opportunities to collaborate. At the moment I'm most interested in narrative and documentary film, interactive or experimental installation, and commercial work. If you'd like to work together you can send me an email at <a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a>
 
 <br><br>
 
-I am always seeking opportunities to collaborate. At the moment I'm most interested in narrative and documentary film, interactive or experimental installation, and commercial work. Feel free to contact me if you want to work together.
+I have always loved working with video, and began producing professional work as early as 2007. Since then I have worked on over 100 projects for a wide variety of individuals, artists, and commercial clients including: Yale University, Hampshire College, Mount Holyoke College, PBS <i>American Masters</i>, Cambridge University Press, Northampton Chamber of Commerce, and The Global Fibrosis Foundation.
 
 <br><br>
 
@@ -126,6 +127,13 @@ A more complete list of my professional and personal work can be found <a target
   <br>
   Python, Apple Computers, Raspberry Pi, Google Suite, LaTeX, Arduino, Microsoft Office, Canvas, Moodle
 </p>
+
+<br><br><br>
+
+<p>
+	Note: there is another Ben Cowper who makes films. He lives in New Zealand and we are not the same person.
+</p>
+
 
 </div>
 
