updated links, etc.

--- a/demo-reel.html
+++ b/demo-reel.html
@@ -61,7 +61,7 @@
 <div class="main">
 
 <hr color="#50A8AF">
-<h2>Cinematography & Editing Reel (2016)</h2>
+<h2>Cinematography & Editing Reel</h2>
 <hr color="#50A8AF">
 <br>
 <div class="space">
