--- a/production-stills.html
+++ b/production-stills.html
@@ -82,6 +82,7 @@
     <img src="images/production/Prod_HazardLights.jpg">
     <img src="images/production/Prod_Demo.jpg">
     <img src="images/production/Prod_Demo2.jpg">
+    <img src="images/production/Prod_Kickstarter.jpg">
     <img src="images/production/Prod_SomethingRestless1.jpg">
     <img src="images/production/Prod_SomethingRestless2.jpg">
     <img src="images/production/Prod_SomethingRestless3.jpg">
