--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -68,7 +68,7 @@
 
 <p>
 
-I am always seeking opportunities to collaborate. At the moment I'm most interested in narrative and documentary film, interactive or experimental installation, and commercial work. If you'd like to work together you can send me an email at <a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a>
+I am always seeking opportunities to collaborate. At the moment I'm most interested in narrative and documentary film, audio storytelling, interactive or experimental installation, and commercial work. If you'd like to work together you can send me an email at <a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a>
 
 <br><br>
 
@@ -117,7 +117,7 @@ A more complete list of my professional and personal work can be found <a target
 <br><br>
   <b>Archivist</b>
   <br>
-  Digitally transferring, preserving, and authoring archaic media formats
+  Digital telecine of 16mm and Super 8 film. Preserving and authoring archaic media formats
 <br><br>
   <b>Live Streaming</b>
   <br>
@@ -125,7 +125,7 @@ A more complete list of my professional and personal work can be found <a target
 <br><br>
   <b>IT and Academic Technology</b>
   <br>
-  Python, Apple Computers, Raspberry Pi, Google Suite, LaTeX, Arduino, Microsoft Office, Canvas, Moodle
+  Python, Apple Computers, Raspberry Pi, Google Suite, LaTeX, Arduino, Microsoft Office, Drupal, Canvas, Moodle
 </p>
 
 <br><br><br>
