added installation page

--- a/installation-portfolio.html
+++ b/installation-portfolio.html
@@ -2,8 +2,17 @@
 <html>
 <head>
 
-<title>Filmmaker, Educator, Artist | About Me - Ben Cowper</title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+<script src="galleria/galleria-1.5.7.min.js"></script>
+
+<title>Installation | Ben Cowper - Filmmaker, Educator, Artist</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
+
+<style type="text/css">
+  p {
+  text-align: center;
+}
+</style>
 
 <link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css">
 <link rel="author" href="humans.txt">
@@ -34,13 +43,13 @@
 <div>
   <img src="icons/menu-black.png" style="width:10%;" alt="menu" onclick="openMenu()" class="menuButton"></img>
   <div id="menu" class="menuItems">
-  <li><a class="active" href="ben-cowper-about.html">me</a></li>
+  <li><a href="ben-cowper-about.html">me</a></li>
   <li><a href="personal-film-portfolio.html">film - personal</a></li>
   <li><a href="professional-film-portfolio.html">film - professional</a></li>
   <li><a href="demo-reel.html">reel</a></li>
   <li><a href="production-stills.html">production stills</a></li>
   <li><a href="tv-studio-renovation.html">tv studio renovation</a></li>
-  <li><a href="installation-portfolio.html">installation</a></li>  
+  <li><a class="active" href="installation-portfolio.html">installation</a></li>  
   <li><a href="photography-portfolio.html">photography</a></li>
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="Ben Cowper | c.v..pdf">c.v.</a></li>
@@ -56,86 +65,110 @@
 <div class="main">
 
 <hr color="#50A8AF">
-<h2>Ben Cowper</h2>
-<h3>cowpervideos@gmail.com</h3>
+<h2>Foodsense (2018)</h2>
 <hr color="#50A8AF">
 <br>
 
-<img class="space" id="me" src="images/Ben_Cowper.jpg" alt="Ben Cowper">
+<div class="space">
+<div class="container">
+<div class="galleria">
+    <img src="images/installation/Foodsense1.jpg">
+    <img src="images/installation/Foodsense2.jpg">
+    <img src="images/installation/Foodsense3.jpg">
+    <img src="images/installation/Foodsense4.jpg">
+</div>
+</div>
 
 <br><br>
+<p>
+Plates of delectable fruits are served in a cocktail party atmosphere complete with smooth jazz. The intense colored lights, music, and a passionfruit-scented air-freshener serve to distort the senses of the party-goers.
+
+<br><br>
+
+(stills from installation at University of Minnesota)
+</p>
+</div>
+
+<br><br>
+
+<hr color="#50A8AF">
+<h2>Wet Paint (2016)</h2>
+<hr color="#50A8AF">
+<br>
 
 <div class="space">
+<div class="container">
+<div class="galleria">
+    <img src="images/installation/WetPaint1.jpg">
+    <img src="images/installation/WetPaint2.jpg">
+    <img src="images/installation/WetPaint3.jpg">
+</div>
+</div>
 
+<br><br>
 <p>
-
-I am always seeking opportunities to collaborate. At the moment I'm most interested in narrative and documentary film, audio storytelling, interactive or experimental installation, and commercial work. If you'd like to work together you can send me an email at <a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a>
-
-<br><br>
-
-I have always loved working with video, and began producing professional work as early as 2007. Since then I have worked on over 100 projects for a wide variety of individuals, artists, and commercial clients including: Yale University, Hampshire College, Mount Holyoke College, PBS <i>American Masters</i>, Cambridge University Press, Northampton Chamber of Commerce, and The Global Fibrosis Foundation.
+A gallery of famous "art" is disgraced and mutilated before your eyes.
 
 <br><br>
 
-A more complete list of my professional and personal work can be found <a target="_blank" href="Ben Cowper | c.v..pdf">here on my C.V.</a>
-
+(stills from installation at Hampshire College, video available upon request)
 </p>
+</div>
 
+<br><br>
+
+<hr color="#50A8AF">
+<h2>No Class (2016)</h2>
+<hr color="#50A8AF">
 <br>
 
-<hr color="#af5750">
+<div class="space">
+<div class="container">
+<div class="galleria">
+    <img src="images/installation/NoClass.jpg">
+</div>
+</div>
 
+<br><br>
+<p>
+Upon receiving the news that class has been cancelled, I wander back to my on campus apartment. Participants follow me into the kitchen where I proceed to make a bowl of cereal and hang out with my friends. The participants are not acknowledged by performers, nor are they offered any sort of accomodations or seating. The performance is improvised and has an indefinite duration, it is only complete when the last participant leaves the apartment.
+
+<br><br>
+
+(still from video of performance at Hampshire College, video available upon request)
+</p>
+</div>
+
+<br><br>
+
+<hr color="#50A8AF">
+<h2>Untitled (2016)</h2>
+<hr color="#50A8AF">
 <br>
 
-<h3 style="text-align: left;">Areas of Technical Expertise:</h3>
+<div class="space">
+<div class="container">
+<div class="galleria">
+    <img src="images/installation/Untitled.jpg">
+</div>
+</div>
 
-<br>
+<script>
+(function() { 
+    Galleria.loadTheme('galleria/themes/classic/galleria.classic.min.js');
+    Galleria.run('.galleria');
+}());
+</script>
 
+<br><br>
 <p>
-  <b>Cinematographer</b>
-  <br>
-  5DmkIII w/Magic Lantern, Blackmagic Cinema, Canon Cinema, GoPro, 16mm Bolex, Super 8 (hand processed)
+Presented on a large scale rear-projection screen (~ 18' x 30') on one wall of a large public atrium, the piece is a 5 minute looping video depicting the opposite side of the atrium. When viewers pass through the atrium the projected image closely resembles what one would see if the screen was turned off or not working, reflecting its surroundings. While observing the piece, the viewer sees a reflection identical to their surroundings missing just their presence.
+
 <br><br>
-  <b>Editor, Colorist</b>
-  <br>
-  Adobe Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
-<br><br>
-  <b>Audio Engineer</b>
-  <br>
-  5.1 surround and stereo recording/mixing (ProTools, Audition, Logic)
-<br><br>
-  <b>Web Designer</b>
-  <br>
-  HTML, CSS, Squarespace, Drupal, Wordpress
-<br><br>
-  <b>Lighting Designer</b>
-  <br>
-  Designing and drawing lighting plots for film and theatre productions
-<br><br>
-  <b>Photographer</b>
-  <br>
-  Digital, 35mm, medium format, and large format film (various cameras and hand processing techniques)
-<br><br>
-  <b>Archivist</b>
-  <br>
-  Digital telecine of 16mm and Super 8 film. Preserving and authoring archaic media formats
-<br><br>
-  <b>Live Streaming</b>
-  <br>
-  Live switching of audio and video for television, theatre, and conferences. Designed and built a 4 camera live TV production and green screen studio. (Blackmagic ATEM, Ustream, Mediasite)
-<br><br>
-  <b>IT and Academic Technology</b>
-  <br>
-  Python, Apple Computers, Raspberry Pi, Google Suite, LaTeX, Arduino, Microsoft Office, Drupal, Canvas, Moodle
+
+(still from looping video, full version available upon request)
 </p>
-
-<br><br><br>
-
-<p>
-	Note: there is another Ben Cowper who makes films. He lives in New Zealand and we are not the same person.
-</p>
-
-
+</div>
 </div>
 
 <br><br>
