--- a/production-stills.html
+++ b/production-stills.html
@@ -49,6 +49,7 @@
   <li><a href="demo-reel.html">reel</a></li>
   <li><a class="active" href="production-stills.html">production stills</a></li>
   <li><a href="tv-studio-renovation.html">tv studio renovation</a></li>
+  <li><a href="installation-portfolio.html">installation</a></li>
   <li><a href="photography-portfolio.html">photography</a></li>
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="Ben Cowper | c.v..pdf">c.v.</a></li>
