--- a/tv-studio-renovation.html
+++ b/tv-studio-renovation.html
@@ -65,20 +65,20 @@
 <div class="main">
 
 <hr color="#50A8AF">
-<h2>Cyclorama Construction (completed photo first)</h2>
+<h2>Cyclorama Construction</h2>
 <hr color="#50A8AF">
 <br>
 
 <div class="space">
 <div class="container">
 <div class="galleria">
-    <img src="images/CycFinished.jpg">
     <img src="images/Cyc1.jpg">
     <img src="images/Cyc2.jpg">
     <img src="images/Cyc3.jpg">
     <img src="images/Cyc4.jpg">
     <img src="images/Cyc5.jpg">
     <img src="images/Cyc6.jpg">
+    <img src="images/Cyc7.jpg">
 </div>
 </div>
 </div>
