--- a/professional-film-portfolio.html
+++ b/professional-film-portfolio.html
@@ -41,8 +41,8 @@
   <img src="icons/menu-black.png" style="width:10%;" alt="menu" onclick="openMenu()" class="menuButton"></img>
   <div id="menu" class="menuItems">
   <li><a href="ben-cowper-about.html">me</a></li>
-  <li><a class="active" href="personal-film-portfolio.html">film - personal</a></li>
-  <li><a href="professional-film-portfolio.html">film - professional</a></li>
+  <li><a href="personal-film-portfolio.html">film - personal</a></li>
+  <li><a class="active" href="professional-film-portfolio.html">film - professional</a></li>
   <li><a href="demo-reel.html">reel</a></li>
   <li><a href="installation-portfolio.html">installation</a></li>
   <li><a href="photography-portfolio.html">photography</a></li>
