updated titles, videos

--- a/demo-reel.html
+++ b/demo-reel.html
@@ -41,8 +41,8 @@
   <img src="icons/menu-black.png" style="width:10%;" alt="menu" onclick="openMenu()" class="menuButton"></img>
   <div id="menu" class="menuItems">
   <li><a href="ben-cowper-about.html">me</a></li>
-  <li><a href="personal-film-portfolio.html">film - personal</a></li>
-  <li><a href="professional-film-portfolio.html">film - professional</a></li>
+  <li><a href="fiction-film-portfolio.html">film - fiction</a></li>
+  <li><a href="commercial-film-portfolio.html">film - commercial</a></li>
   <li><a class="active" href="demo-reel.html">reel</a></li>
   <li><a href="installation-portfolio.html">installation</a></li>
   <li><a href="photography-portfolio.html">photography</a></li>
@@ -67,11 +67,11 @@
 <br>
 <div class="space">
 <div class="container">
-	<iframe src="https://player.vimeo.com/video/87645149?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+	<iframe src="https://player.vimeo.com/video/312159081?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
 </div>
 <br><br>
 <p>
-	All clips photographed and edited by Ben Cowper
+	Selected editing and camera work from the past couple years.
 </p>
 </div>
 </div>
