--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ body, html {
   <img src="icons/menu-white.png" style="width:10%;" alt="menu" onclick="openMenu()" class="menuButton"></img>
   <div id="menu" class="menuItems">
   <li><a href="ben-cowper-about.html">me</a></li>
-  <li><a href="personal-film-portfolio.html">film - personal</a></li>
-  <li><a href="professional-film-portfolio.html">film - professional</a></li>
+  <li><a href="fiction-film-portfolio.html">film - fiction</a></li>
+  <li><a href="commercial-film-portfolio.html">film - commercial</a></li>
   <li><a href="demo-reel.html">reel</a></li>
   <li><a href="installation-portfolio.html">installation</a></li>
   <li><a href="photography-portfolio.html">photography</a></li>
