--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -73,9 +73,11 @@
 <div class="space">
 <div class="container">
 <div class="galleria">
+    <img src="images/DriveMount1.jpg">
+    <img src="images/DriveMount2.jpg">
     <img src="images/Snowflake.jpg">
-    <img src="images/Sunglasses.jpg">
     <img src="images/SanFrancisco.jpg">
+    <img src="images/Sunglasses.jpg">
     <img src="images/RedBarn.jpg">
     <img src="images/Moon.jpg">
     <img src="images/Mountain.jpg">
